<resources>
    <string name="app_name">Aplicacion4</string>
    <string name="jugar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="acercaDe">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="text_acercade">Esta aplicacion ha sido desarrollada como
    ejemplo en el modulo de Diseño de Interficies Web para demostrar como se pueden lanzar
    nuevas actividades desde la actividad principal</string>
    <string name="configuracion">Configuracion</string>
    <string name="acercade">Acerca de...</string>
    <string name="menuConfig">Configuracio</string>
    <string name="menucercade">Buscar</string>
    <string name="pa1_title">Reproducir música</string>
    <string name="pa1_key">Musica</string>
    <string name="pa1_summary">Se reproduce música de fondo</string>
    <string name="pa2_title">Tipo de gráficos</string>
    <string name="pa2_key">Graficos</string>
    <string name="pa2_summary">Se escoge la representación de los gráficos</string>
    <string name="pa3_title">Número de fragmentos</string>
    <string name="pa3_key">Fragmentos</string>
    <string name="pa3_summary">En cuantos trozos se divide un asteroide</string>
    <string name="multijugador_title">Modo Mutijugador</string>
    <string name="multijugador_key">Multijugador</string>
    <string name="activarMulti_title">Activar modo multijugador</string>
    <string name="maximoJugadores_key">JugadoresMax</string>
    <string name="jugadoresMax_title">Máximo de jugadores</string>
    <string name="conexion_title">Tipo de conexión</string>
    <string name="textoError1">Ha de ser un número</string>
    <string name="textoAsteroide1">En cuantos trozos se divide un asteroide (</string>
    <string name="textoMaximoFragmentos">Máximo de fragmentos 9</string>
    <string name="conexion_key">TipoConexion</string>
    <string name="pa4_title">Activar Sensores</string>
    <string name="pa4_key">sensores</string>
    <string name="pa4_summary">Activación de sensores</string>
    <string name="pa5_title">Almacenamiento</string>
    <string name="pa5_key">almacenaje</string>
    <string name="pa5_summary">Elegir almacenamiento</string>
</resources>
