<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/config"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="@integer/orderIn"
        android:showAsAction="never"
        android:title="@string/menuConfig" />
    <item
        android:id="@+id/acercaDe"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="10"
        android:title="@string/acercade"
        android:showAsAction="ifRoom|withText"/>
    <item android:title="@string/menucercade"
        android:id="@+id/cercar"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="115"
        android:showAsAction="always|collapseActionView"/>
</menu>